add manifest video
