# lending-backend/docs/swagger.json
@@ -147,6 +147,12 @@
                     },
                     {
                         "type": "string",
+                        "description": "原始連結",
+                        "name": "link",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
                         "description": "媒體描述",
                         "name": "description",
                         "in": "formData"
@@ -157,6 +163,59 @@
                         "description": "成功建立的媒體記錄",
                         "schema": {
                             "$ref": "#/definitions/model.Media"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/items/media/{object_id}": {
+            "get": {
+                "description": "根據物品 ID (object_id) 獲取該物品相關的所有媒體檔案（如照片與影片），包含檔案的 URL、類型與描述。",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Items"
+                ],
+                "summary": "取得物品的所有影音媒體",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "物品 ID",
+                        "name": "object_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "媒體檔案列表",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Media"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "無效的物品 ID 格式",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "無法取得媒體項目或資料庫錯誤",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -287,7 +346,7 @@
                 "tags": [
                     "Items"
                 ],
-                "summary": "上傳物品圖片",
+                "summary": "上傳圖片封面",
                 "parameters": [
                     {
                         "type": "integer",
@@ -799,6 +858,9 @@
                 },
                 "start_time": {
                     "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
@@ -809,6 +871,9 @@
                     "type": "string"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "link": {
                     "type": "string"
                 },
                 "media_id": {
